H3CIPMSJAVA-20180830/src/objects/data__c.object
<CustomObject>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>个案</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>data</relationshipLabel>
        <relationshipName>data2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <formula>if(case__c!=null,text(case__r.Status),text(wo__r.Status))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工作订单</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>data</relationshipLabel>
        <relationshipName>data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>data</label>
    <nameField>
        <label>data名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>